project: Fix plugin for linux
- Update to OBS 27 SDK
- Add debian package for easy installation
- Fix about language string
- Add more exceptions for better debugging

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,7 +1,7 @@
 Menu="OWN3D"
 Menu.ThemeBrowser="Overlay & Alerts Store"
 Menu.CheckForUpdates="Check for Updates"
-Menu.About
+Menu.About="About"
 
 ThemeBrowser.Title="OWN3D Pro"
 ThemeInstaller.Title="Installing Overlay - %s"
