project: Change urls to cdn

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,4 +1,4 @@
-Menu="OWN3D"
+Menu="OWN3D Pro"
 Menu.ThemeBrowser="Overlay & Alerts Store"
 Menu.CheckForUpdates="Check for Updates"
 Menu.About="About"
