project: Fix typo, change deb version

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,5 +1,5 @@
-Menu="OWN3D Pro"
-Menu.ThemeBrowser="Overlay & Alerts Store"
+Menu="OWN3D"
+Menu.ThemeBrowser="Overlay && Alerts Store"
 Menu.CheckForUpdates="Check for Updates"
 Menu.About="About"
 
