--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,4 +1,4 @@
-Menu="OWN3D"
+Menu="OWN3D Pro"
 Menu.ThemeBrowser="Overlay && Alerts Store"
 Menu.CheckForUpdates="Check for Updates"
 Menu.About="About"
@@ -10,9 +10,9 @@ ThemeInstaller.State.Download="Downloading Overlay:"
 ThemeInstaller.State.Extract="Extracting Overlay:"
 ThemeInstaller.State.Install="Installing Overlay:"
 
-Source.Alerts="OWN3D Alerts"
+Source.Alerts="OWN3D Pro Alerts"
 Source.Alerts.Size="Size"
-Source.Labels="OWN3D Labels"
+Source.Labels="OWN3D Pro Labels"
 Source.Labels.Size="Size"
 Source.Labels.Type="Type"
 Source.Labels.Type.Follower="Latest Follower"
@@ -24,14 +24,14 @@ Source.Labels.Type.DonationTop="Top Donation"
 Source.Labels.Type.Countdown="Countdown"
 Source.Labels.Color="Color"
 Source.Labels.Font="Font"
-Source.Chat="OWN3D Chat"
+Source.Chat="OWN3D Pro Chat"
 Source.Chat.Size="Size"
 Source.Chat.Color="Color"
 Source.Chat.Font="Font"
 
-Dock.Chat="OWN3D Chat"
+Dock.Chat="Chat"
 
-Dock.EventList="OWN3D Event List"
+Dock.EventList="Event List"
 
 # GDPR Check
 GDPR.Title="OWN3D Pro Privacy Policy Agreement"
