--- a/data/locale/es-ES.ini
+++ b/data/locale/es-ES.ini
@@ -1,12 +1,11 @@
-ThemeBrowser.Title="OWN3D Pro"
 ThemeInstaller.Title="Instalando overlay - %s"
 ThemeInstaller.State.Waiting="Esperando los datos del overlay:"
 ThemeInstaller.State.Download="Descargando overlay:"
 ThemeInstaller.State.Extract="Extrayendo overlay:"
 ThemeInstaller.State.Install="Instalando overlay:"
-Source.Alerts="Alertas OWN3D"
+Source.Alerts="Alertas OWN3D Pro"
 Source.Alerts.Size="Tamaño"
-Source.Labels="Etiquetas OWN3D"
+Source.Labels="Etiquetas OWN3D Pro"
 Source.Labels.Size="Tamaño"
 Source.Labels.Type="Tipo"
 Source.Labels.Type.Follower="Último seguidor"
@@ -18,7 +17,6 @@ Source.Labels.Type.DonationTop="La mejor donación"
 Source.Labels.Type.Countdown="Cuenta atrás"
 Source.Labels.Color="Color"
 Source.Labels.Font="Fuente"
-Source.Chat="Chat OWN3D"
 Source.Chat.Size="Tamaño"
 Source.Chat.Color="Color"
 Source.Chat.Font="Fuente"
