--- a/data/locale/fr-FR.ini
+++ b/data/locale/fr-FR.ini
@@ -1,12 +1,11 @@
-ThemeBrowser.Title="OWN3D Pro"
 ThemeInstaller.Title="Installation de l'Overlay - %s"
 ThemeInstaller.State.Waiting="En attente des données de l'Overlay :"
 ThemeInstaller.State.Download="Téléchargement de l'Overlay :"
 ThemeInstaller.State.Extract="Extraction de l'Overlay :"
 ThemeInstaller.State.Install="Installation de l'Overlay"
-Source.Alerts="Alertes OWN3D"
+Source.Alerts="Alertes OWN3D Pro"
 Source.Alerts.Size="Taille"
-Source.Labels="Labels OWN3D"
+Source.Labels="Labels OWN3D Pro"
 Source.Labels.Size="Taille"
 Source.Labels.Type="Type"
 Source.Labels.Type.Follower="Dernier Follower"
@@ -18,7 +17,6 @@ Source.Labels.Type.DonationTop="Top Donation"
 Source.Labels.Type.Countdown="Compte à rebours"
 Source.Labels.Color="Couleur"
 Source.Labels.Font="Police"
-Source.Chat="Chat OWN3D"
 Source.Chat.Size="Taille"
 Source.Chat.Color="Couleur"
 Source.Chat.Font="Police"
